WebApp/autoreduce_webapp/test_files/syntax_error/reduce_vars.py
# pylint:skip-file
standard_vars = {
    'test' = 'test'
    syntaxerr
}
advanced_vars = {
}
